fix:add css styles

--- a/index.html
+++ b/index.html
@@ -9,26 +9,58 @@
 </head>
 <body>
     <header>
-    <div>
+    <div class="header__div">
         <h1 class="header">CSS Bayan</h1>
     </div>
     </header>
 
     <main class="main">
-<section class="first__section">
-        <label for="meme1">
-                <input type="radio" class="" id="meme1">
-        <div>
-        <p>I looked at you</p>
-            <img class="black_plus" src="img/black plus.jpg" alt="black plus">
-        </div>
-        <div>
-            <img src="img/I looked at you.png" alt="meme1">
-        </div>
+
+<div class="main__div">
+    <input class="main__input" type="radio" id="meme1">
+        <label class="main__label" for="meme1">      
+        <p class="main__p">I looked at you</p>
+        <img class="black__plus" src="img/black plus.png" alt="black plus">
+        <img class="main__img" src="img/I looked at you.png" alt="meme1">
     </label>
-    
-</section>
+    </div>
+
+    <div class="main__div">
+        <input class="main__input" type="radio" id="meme2">
+            <label class="main__label" for="meme2">      
+            <p class="main__p">Gobs requirements</p>
+            <img class="black__plus" src="img/black plus.png" alt="black plus">
+            <img class="main__img" src="img/jobs requirements.png" alt="meme2">
+        </label>
         </div>
+
+        <div class="main__div">
+            <input class="main__input" type="radio" id="meme3">
+                <label class="main__label" for="meme3">      
+                <p class="main__p">Programming is thinking not typing</p>
+                <img class="black__plus" src="img/black plus.png" alt="black plus">
+                <img class="main__img" src="img/programming is thinking not typing.png" alt="meme3">
+            </label>
+            </div>
+
+            <div class="main__div">
+                <input class="main__input" type="radio" id="meme4">
+                    <label class="main__label" for="meme4">      
+                    <p class="main__p">Programming</p>
+                    <img class="black__plus" src="img/black plus.png" alt="black plus">
+                    <img class="main__img" src="img/programming.png" alt="meme4">
+                </label>
+                </div>
+
+                <div class="main__div">
+                    <input class="main__input" type="radio" id="meme5">
+                        <label class="main__label" for="meme5">      
+                        <p class="main__p">The struggle</p>
+                        <img class="black__plus" src="img/black plus.png" alt="black plus">
+                        <img class="main__img" src="img/the struggle.png" alt="meme5">
+                    </label>
+                    </div>
+</div>
     </main>
 </body>
 </html>
